[gd_scene load_steps=6 format=2]

[ext_resource path="res://themes/general_ui.theme" type="Theme" id=1]
[ext_resource path="res://Signika-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/resource_select.gd" type="Script" id=3]
[ext_resource path="res://components/resource_counter.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]

size = 28
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[node name="Node" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="MarginContainer" type="MarginContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
custom_constants/margin_right = 20
custom_constants/margin_top = 50
custom_constants/margin_left = 20
custom_constants/margin_bottom = 50
_sections_unfolded = [ "Theme", "custom_constants" ]

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 50.0
margin_right = 520.0
margin_bottom = 910.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 20
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 500.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 1 )
text = "Select Resources"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="RemainingLabel" type="Label" parent="MarginContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 90.0
margin_right = 500.0
margin_bottom = 134.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Resources remaining: 0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "custom_fonts" ]

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 154.0
margin_right = 500.0
margin_bottom = 680.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 0
script = ExtResource( 3 )
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="RCounter" parent="MarginContainer/VBoxContainer/HBoxContainer" index="0" instance=ExtResource( 4 )]

anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 153.0
margin_bottom = 526.0

[node name="GCounter" parent="MarginContainer/VBoxContainer/HBoxContainer" index="1" instance=ExtResource( 4 )]

anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 173.0
margin_right = 326.0
margin_bottom = 526.0

[node name="BCounter" parent="MarginContainer/VBoxContainer/HBoxContainer" index="2" instance=ExtResource( 4 )]

anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 346.0
margin_right = 500.0
margin_bottom = 526.0

[node name="ResetButton" type="Button" parent="MarginContainer/VBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 700.0
margin_right = 500.0
margin_bottom = 770.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Reset"
flat = false
align = 1

[node name="BeginButton" type="Button" parent="MarginContainer/VBoxContainer" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 790.0
margin_right = 500.0
margin_bottom = 860.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Begin"
flat = false
align = 1


